--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "O Jogo da Forca",
   "dir": "ltr",
-  "short_name": ""loon-420.github"",
+  "short_name": "loon-420.github",
   "description": "Um jogo da forca interativo e personalizável.",
   "start_url": "/https://loon-420.github.io/JogodaForca/",
   "orientation": "any",
