--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "O Jogo da Forca",
+  "lang": "pt",
   "dir": "ltr",
   "short_name": "loon-420.github",
   "description": "Um jogo da forca interativo e personalizável.",
