--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "short_name": "loon-420.github",
   "description": "Um jogo da forca interativo e personalizável.",
   "start_url": "/https://loon-420.github.io/JogodaForca/",
-  "orientation": "any",
+  "orientation": "portrait",
   "display": "standalone",
   "background_color": "#ffffff",
   "scope": "/",
